--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-<<<<<<< HEAD
   "name": "music",
-=======
-  "name": "musicapp",
->>>>>>> origin/main
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
